Fix plugin deactivation handling